<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
<!--Bagian Nama-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_inpt_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_edt_inpt_name"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--Bagian Username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_inpt_u_name"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_edt_inpt_u_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/modifiedEditText"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--Bagian Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_inpt_email"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_edt_inpt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/modifiedEditText"
            android:maxLines="1"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--Bagian Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_inpt_password"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_edt_inpt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/modifiedEditText"
            android:maxLines="1"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_cirSignupButton"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="Signup" />

    <Button
        android:id="@+id/back_login"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/signup_login_hint"
        android:textAlignment="textEnd"
        android:background="@null"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />
</LinearLayout>